--- a/social_navigation_layers/package.xml
+++ b/social_navigation_layers/package.xml
@@ -2,8 +2,8 @@
   <name>social_navigation_layers</name>
   <version>0.3.1</version>
   <description>
-  Plugin-based layers for the navigation stack that 
-  implement various social navigation contraints, like proxemic distance. 
+  Plugin-based layers for the navigation stack that
+  implement various social navigation contraints, like proxemic distance.
   </description>
   <author email="davidvlu@gmail.com">David V. Lu!!</author>
   <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
@@ -11,15 +11,15 @@
   <url>http://ros.org/wiki/social_navigation_layers</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  
+
   <build_depend>roscpp</build_depend>
   <build_depend>costmap_2d</build_depend>
-  <build_depend>people_msgs</build_depend>
+  <build_depend>object_bridge_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
-  
+
   <run_depend>roscpp</run_depend>
   <run_depend>costmap_2d</run_depend>
-  <run_depend>people_msgs</run_depend>
+  <run_depend>object_bridge_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
 
 <export>
